-Updated BControl patch to fix an issue with automatic loading of protocols via RunRats

--- a/Assets/BcontrolPatch/ExperPort/Settings/Settings_Custom_v2_0.conf
+++ b/Assets/BcontrolPatch/ExperPort/Settings/Settings_Custom_v2_0.conf
@@ -39,6 +39,7 @@ INPUTLINES;         R;      3;
 %INPUTLINES;         B2;      6;    % BNC TTL Input Ch2
 
 SOUND; sound_sample_rate; 44100;
+SOUND; volume_scaling; 10;
 
 WATER; skip_calibration;          1;
 RUNRATS; skip_manual_test;        0;
